# mtg-tracker

./: .gitignore  Cargo.toml
injector/: Cargo.toml
injector/src/: assembler.rs  lib.rs  process.rs  utils.rs
mtga-datacollector/: Loader.cs  MtgaDataCollector.cs  MtgaDataDumper.cs  MtgaPrintingData.cs  mtga-datacollector.csproj
tracker/: Cargo.toml  build.rs
tracker/src/: assets.rs  configuration.rs  gui.rs  lib.rs  logger.rs  logwatcher.rs  main.rs  mtgadb.rs  parser.rs  tracker.rs  utils.rs
tracker/src/gui/: components.rs  style.rs  update.rs
tracker/src/gui/components/: collection.rs  draftsummary.rs  injectbar.rs  logview.rs  popup_element.rs  setselector.rs
tracker/src/gui/style/: button.rs  container.rs  scrollable.rs  text.rs
tracker/src/mtgadb/: model.rs
