[package]
name = "injector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies.windows]
version = "0.42.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_WindowsProgramming",
]

[dependencies]
rand = "0.8.5"
async-std = { version = "1.12.0" }
futures = { version = "0.3.24" }