[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
injector = { path = "../injector" }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled", "serde_json"] }
async-std = { version = "1.12.0" }
iced = { version = "0.4.2", features = ["pure", "async-std", "image", "svg"] }
iced_futures = { version = "0.4.1" }