[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
injector = { path = "../injector" }
rusqlite = { version = "0.31.0", features = ["bundled", "serde_json"] }
async-std = { version = "1.12.0" }
iced = { version = "0.12.1", features = ["async-std", "image", "svg", "advanced", "tokio"] }
iced_futures = { version = "0.12.0" }
iced_aw = { version = "0.9.3", features = ["wrap"] }
fancy-regex = "0.13.0"
chrono = "0.4.31"
onig = { version = "6.4.0", default-features = false }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = "0.12.5"
